discussion/kv_engine/141636/141636_rev54_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-15 09:54:07.000000000
Message: 
Uploaded patch set 54: Patch Set 53 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 12:35:18.000000000
Message: 
Patch Set 54: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36885/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0040/0096]: test dcp stream takeover no items...(58 ms) OK


75% tests passed, 103 tests failed out of 407

Total Test time (real) = 302.14 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36885/ )

Timeout of a CTest test 407/407 Test #266: ep_testsuite_dcp.value_eviction.comp_active ...................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36885/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31514/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/network_interface_manager.h:58:19:
error: no member named "mcbp" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31514/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9896/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:58:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doTlsReconfigure(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:60:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doDefineInterface(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:62:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doDeleteInterface(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:64:19: error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
    std::pair<cb::mcbp::Status, std::string> doListInterface();
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:66:5: error: unknown type name "uniqueSslPtr" [clang-diagnostic-error]
    uniqueSslPtr createClientSslHandle();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9896/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:58:19:
error: no member named "mcbp" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9896/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10544/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10544/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11463/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11463/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11891/ : FAILURE

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87c5c) in operator new(unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11891/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11616/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11616/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19478/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8482/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/402/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
